--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="3; href = /dist/index.html />
+    <meta http-equiv="refresh" content="3; href = /dist/index.html" />
     <title>Please Wait</title>
+    <script type="text/javascript">
+        window.location.replace = "/dist/index.html";
+    </script>
 </head>
 <body>
 </body>
