--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="3; url = mikeymaikh.github.io/mg_portfolio/dist/index.html" />
     <title>Please Wait</title>
-    <script type="text/javascript">
-        window.location.replace = "/dist/index.html";
-    </script>
 </head>
 <body>
 </body>
