--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             -webkit-animation: spin 2s linear infinite;
             animation: spin 2s linear infinite;
             text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 20%;
         }
     
         @-webkit-keyframes spin {
